Lab5/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> CODE
Rule 1     CODE -> INSTRUCTIONS
Rule 2     INSTRUCTIONS -> { INSTRUCTIONS }
Rule 3     INSTRUCTIONS -> INSTRUCTION INSTRUCTIONS
Rule 4     INSTRUCTIONS -> INSTRUCTION
Rule 5     INSTRUCTION -> ASSIGN ;
Rule 6     INSTRUCTION -> IF_CONDITION
Rule 7     INSTRUCTION -> FOR_LOOP
Rule 8     INSTRUCTION -> WHILE_LOOP
Rule 9     INSTRUCTION -> CONTROL_INSTRUCTION ;
Rule 10    INSTRUCTION -> PRINT_CALL ;
Rule 11    ASSIGN -> ID ASSIGN_TYPE EXPRESSION
Rule 12    ASSIGN -> ID [ INTNUM ] ASSIGN_TYPE EXPRESSION
Rule 13    ASSIGN -> ID [ INTNUM , INTNUM ] ASSIGN_TYPE EXPRESSION
Rule 14    ASSIGN_TYPE -> =
Rule 15    ASSIGN_TYPE -> ADDASSIGN
Rule 16    ASSIGN_TYPE -> SUBASSIGN
Rule 17    ASSIGN_TYPE -> DIVASSIGN
Rule 18    ASSIGN_TYPE -> MULASSIGN
Rule 19    EXPRESSION -> BINARY_EXPRESSION
Rule 20    EXPRESSION -> LOGICAL_EXPRESSION
Rule 21    EXPRESSION -> MATRIX_EXPRESSION
Rule 22    EXPRESSION -> ( EXPRESSION )
Rule 23    EXPRESSION -> TERM
Rule 24    BINARY_EXPRESSION -> EXPRESSION + EXPRESSION
Rule 25    BINARY_EXPRESSION -> EXPRESSION - EXPRESSION
Rule 26    BINARY_EXPRESSION -> EXPRESSION * EXPRESSION
Rule 27    BINARY_EXPRESSION -> EXPRESSION / EXPRESSION
Rule 28    LOGICAL_EXPRESSION -> EXPRESSION > EXPRESSION
Rule 29    LOGICAL_EXPRESSION -> EXPRESSION < EXPRESSION
Rule 30    LOGICAL_EXPRESSION -> EXPRESSION EQORGT EXPRESSION
Rule 31    LOGICAL_EXPRESSION -> EXPRESSION EQORLESS EXPRESSION
Rule 32    LOGICAL_EXPRESSION -> EXPRESSION EQUAL EXPRESSION
Rule 33    LOGICAL_EXPRESSION -> EXPRESSION NOTEQUAL EXPRESSION
Rule 34    MATRIX_EXPRESSION -> EXPRESSION DOTADD EXPRESSION
Rule 35    MATRIX_EXPRESSION -> EXPRESSION DOTSUB EXPRESSION
Rule 36    MATRIX_EXPRESSION -> EXPRESSION DOTMUL EXPRESSION
Rule 37    MATRIX_EXPRESSION -> EXPRESSION DOTDIV EXPRESSION
Rule 38    TERM -> ID
Rule 39    TERM -> INTNUM
Rule 40    TERM -> FLOATNUM
Rule 41    TERM -> STRING
Rule 42    TERM -> MATRIX
Rule 43    TERM -> FUNCTION_CALL
Rule 44    TERM -> ID '
Rule 45    TERM -> - ID
Rule 46    INTNUM_OR_ID -> INTNUM
Rule 47    INTNUM_OR_ID -> ID
Rule 48    MATRIX -> [ VECTORS ]
Rule 49    VECTORS -> VECTORS ; VECTOR
Rule 50    VECTORS -> VECTOR
Rule 51    VECTOR -> VECTOR , TERM
Rule 52    VECTOR -> TERM
Rule 53    FUNCTION_CALL -> FUNCTION_NAME ( TERM )
Rule 54    FUNCTION_NAME -> ZEROS
Rule 55    FUNCTION_NAME -> ONES
Rule 56    FUNCTION_NAME -> EYE
Rule 57    CONTROL_INSTRUCTION -> BREAK
Rule 58    CONTROL_INSTRUCTION -> CONTINUE
Rule 59    CONTROL_INSTRUCTION -> RETURN
Rule 60    CONTROL_INSTRUCTION -> RETURN EXPRESSION
Rule 61    PRINT_CALL -> PRINT PRINT_TERMS
Rule 62    PRINT_TERMS -> PRINT_TERMS , TERM
Rule 63    PRINT_TERMS -> TERM
Rule 64    IF_CONDITION -> IF ( LOGICAL_EXPRESSION ) INSTRUCTION ELIF_STATEMENTS ELSE_STATEMENT
Rule 65    IF_CONDITION -> IF ( LOGICAL_EXPRESSION ) { INSTRUCTIONS } ELIF_STATEMENTS ELSE_STATEMENT
Rule 66    ELIF_STATEMENTS -> ELSEIF ( LOGICAL_EXPRESSION ) INSTRUCTION ELIF_STATEMENTS
Rule 67    ELIF_STATEMENTS -> ELSEIF ( LOGICAL_EXPRESSION ) { INSTRUCTIONS } ELIF_STATEMENTS
Rule 68    ELIF_STATEMENTS -> ELSEIF ( LOGICAL_EXPRESSION ) INSTRUCTION
Rule 69    ELIF_STATEMENTS -> ELSEIF ( LOGICAL_EXPRESSION ) { INSTRUCTIONS }
Rule 70    ELSE_STATEMENT -> ELSE INSTRUCTION
Rule 71    ELSE_STATEMENT -> ELSE { INSTRUCTIONS }
Rule 72    ELSE_STATEMENT -> <empty>
Rule 73    FOR_LOOP -> FOR FOR_CONDITION { INSTRUCTIONS }
Rule 74    FOR_LOOP -> FOR FOR_CONDITION INSTRUCTION
Rule 75    FOR_CONDITION -> TERM = INTNUM_OR_ID : INTNUM_OR_ID
Rule 76    WHILE_LOOP -> WHILE ( LOGICAL_EXPRESSION ) { INSTRUCTIONS }
Rule 77    WHILE_LOOP -> WHILE ( LOGICAL_EXPRESSION ) INSTRUCTION

Terminals, with rules where they appear

'                    : 44
(                    : 22 53 64 65 66 67 68 69 76 77
)                    : 22 53 64 65 66 67 68 69 76 77
*                    : 26
+                    : 24
,                    : 13 51 62
-                    : 25 45
/                    : 27
:                    : 75
;                    : 5 9 10 49
<                    : 29
=                    : 14 75
>                    : 28
ADDASSIGN            : 15
BREAK                : 57
CONTINUE             : 58
DIVASSIGN            : 17
DOTADD               : 34
DOTDIV               : 37
DOTMUL               : 36
DOTSUB               : 35
ELSE                 : 70 71
ELSEIF               : 66 67 68 69
EQORGT               : 30
EQORLESS             : 31
EQUAL                : 32
EYE                  : 56
FLOATNUM             : 40
FOR                  : 73 74
ID                   : 11 12 13 38 44 45 47
IF                   : 64 65
INTNUM               : 12 13 13 39 46
MULASSIGN            : 18
NOTEQUAL             : 33
ONES                 : 55
PRINT                : 61
RETURN               : 59 60
STRING               : 41
SUBASSIGN            : 16
WHILE                : 76 77
ZEROS                : 54
[                    : 12 13 48
]                    : 12 13 48
error                : 
{                    : 2 65 67 69 71 73 76
}                    : 2 65 67 69 71 73 76

Nonterminals, with rules where they appear

ASSIGN               : 5
ASSIGN_TYPE          : 11 12 13
BINARY_EXPRESSION    : 19
CODE                 : 0
CONTROL_INSTRUCTION  : 9
ELIF_STATEMENTS      : 64 65 66 67
ELSE_STATEMENT       : 64 65
EXPRESSION           : 11 12 13 22 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 60
FOR_CONDITION        : 73 74
FOR_LOOP             : 7
FUNCTION_CALL        : 43
FUNCTION_NAME        : 53
IF_CONDITION         : 6
INSTRUCTION          : 3 4 64 66 68 70 74 77
INSTRUCTIONS         : 1 2 3 65 67 69 71 73 76
INTNUM_OR_ID         : 75 75
LOGICAL_EXPRESSION   : 20 64 65 66 67 68 69 76 77
MATRIX               : 42
MATRIX_EXPRESSION    : 21
PRINT_CALL           : 10
PRINT_TERMS          : 61 62
TERM                 : 23 51 52 53 62 63 75
VECTOR               : 49 50 51
VECTORS              : 48 49
WHILE_LOOP           : 8

Parsing method: LALR

state 0

    (0) S' -> . CODE
    (1) CODE -> . INSTRUCTIONS
    (2) INSTRUCTIONS -> . { INSTRUCTIONS }
    (3) INSTRUCTIONS -> . INSTRUCTION INSTRUCTIONS
    (4) INSTRUCTIONS -> . INSTRUCTION
    (5) INSTRUCTION -> . ASSIGN ;
    (6) INSTRUCTION -> . IF_CONDITION
    (7) INSTRUCTION -> . FOR_LOOP
    (8) INSTRUCTION -> . WHILE_LOOP
    (9) INSTRUCTION -> . CONTROL_INSTRUCTION ;
    (10) INSTRUCTION -> . PRINT_CALL ;
    (11) ASSIGN -> . ID ASSIGN_TYPE EXPRESSION
    (12) ASSIGN -> . ID [ INTNUM ] ASSIGN_TYPE EXPRESSION
    (13) ASSIGN -> . ID [ INTNUM , INTNUM ] ASSIGN_TYPE EXPRESSION
    (64) IF_CONDITION -> . IF ( LOGICAL_EXPRESSION ) INSTRUCTION ELIF_STATEMENTS ELSE_STATEMENT
    (65) IF_CONDITION -> . IF ( LOGICAL_EXPRESSION ) { INSTRUCTIONS } ELIF_STATEMENTS ELSE_STATEMENT
    (73) FOR_LOOP -> . FOR FOR_CONDITION { INSTRUCTIONS }
    (74) FOR_LOOP -> . FOR FOR_CONDITION INSTRUCTION
    (76) WHILE_LOOP -> . WHILE ( LOGICAL_EXPRESSION ) { INSTRUCTIONS }
    (77) WHILE_LOOP -> . WHILE ( LOGICAL_EXPRESSION ) INSTRUCTION
    (57) CONTROL_INSTRUCTION -> . BREAK
    (58) CONTROL_INSTRUCTION -> . CONTINUE
    (59) CONTROL_INSTRUCTION -> . RETURN
    (60) CONTROL_INSTRUCTION -> . RETURN EXPRESSION
    (61) PRINT_CALL -> . PRINT PRINT_TERMS

    {               shift and go to state 3
    ID              shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18

    CODE                           shift and go to state 1
    INSTRUCTIONS                   shift and go to state 2
    INSTRUCTION                    shift and go to state 4
    ASSIGN                         shift and go to state 5
    IF_CONDITION                   shift and go to state 6
    FOR_LOOP                       shift and go to state 7
    WHILE_LOOP                     shift and go to state 8
    CONTROL_INSTRUCTION            shift and go to state 9
    PRINT_CALL                     shift and go to state 10

state 1

    (0) S' -> CODE .



state 2

    (1) CODE -> INSTRUCTIONS .

    $end            reduce using rule 1 (CODE -> INSTRUCTIONS .)


state 3

    (2) INSTRUCTIONS -> { . INSTRUCTIONS }
    (2) INSTRUCTIONS -> . { INSTRUCTIONS }
    (3) INSTRUCTIONS -> . INSTRUCTION INSTRUCTIONS
    (4) INSTRUCTIONS -> . INSTRUCTION
    (5) INSTRUCTION -> . ASSIGN ;
    (6) INSTRUCTION -> . IF_CONDITION
    (7) INSTRUCTION -> . FOR_LOOP
    (8) INSTRUCTION -> . WHILE_LOOP
    (9) INSTRUCTION -> . CONTROL_INSTRUCTION ;
    (10) INSTRUCTION -> . PRINT_CALL ;
    (11) ASSIGN -> . ID ASSIGN_TYPE EXPRESSION
    (12) ASSIGN -> . ID [ INTNUM ] ASSIGN_TYPE EXPRESSION
    (13) ASSIGN -> . ID [ INTNUM , INTNUM ] ASSIGN_TYPE EXPRESSION
    (64) IF_CONDITION -> . IF ( LOGICAL_EXPRESSION ) INSTRUCTION ELIF_STATEMENTS ELSE_STATEMENT
    (65) IF_CONDITION -> . IF ( LOGICAL_EXPRESSION ) { INSTRUCTIONS } ELIF_STATEMENTS ELSE_STATEMENT
    (73) FOR_LOOP -> . FOR FOR_CONDITION { INSTRUCTIONS }
    (74) FOR_LOOP -> . FOR FOR_CONDITION INSTRUCTION
    (76) WHILE_LOOP -> . WHILE ( LOGICAL_EXPRESSION ) { INSTRUCTIONS }
    (77) WHILE_LOOP -> . WHILE ( LOGICAL_EXPRESSION ) INSTRUCTION
    (57) CONTROL_INSTRUCTION -> . BREAK
    (58) CONTROL_INSTRUCTION -> . CONTINUE
    (59) CONTROL_INSTRUCTION -> . RETURN
    (60) CONTROL_INSTRUCTION -> . RETURN EXPRESSION
    (61) PRINT_CALL -> . PRINT PRINT_TERMS

    {               shift and go to state 3
    ID              shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18

    INSTRUCTIONS                   shift and go to state 19
    INSTRUCTION                    shift and go to state 4
    ASSIGN                         shift and go to state 5
    IF_CONDITION                   shift and go to state 6
    FOR_LOOP                       shift and go to state 7
    WHILE_LOOP                     shift and go to state 8
    CONTROL_INSTRUCTION            shift and go to state 9
    PRINT_CALL                     shift and go to state 10

state 4

    (3) INSTRUCTIONS -> INSTRUCTION . INSTRUCTIONS
    (4) INSTRUCTIONS -> INSTRUCTION .
    (2) INSTRUCTIONS -> . { INSTRUCTIONS }
    (3) INSTRUCTIONS -> . INSTRUCTION INSTRUCTIONS
    (4) INSTRUCTIONS -> . INSTRUCTION
    (5) INSTRUCTION -> . ASSIGN ;
    (6) INSTRUCTION -> . IF_CONDITION
    (7) INSTRUCTION -> . FOR_LOOP
    (8) INSTRUCTION -> . WHILE_LOOP
    (9) INSTRUCTION -> . CONTROL_INSTRUCTION ;
    (10) INSTRUCTION -> . PRINT_CALL ;
    (11) ASSIGN -> . ID ASSIGN_TYPE EXPRESSION
    (12) ASSIGN -> . ID [ INTNUM ] ASSIGN_TYPE EXPRESSION
    (13) ASSIGN -> . ID [ INTNUM , INTNUM ] ASSIGN_TYPE EXPRESSION
    (64) IF_CONDITION -> . IF ( LOGICAL_EXPRESSION ) INSTRUCTION ELIF_STATEMENTS ELSE_STATEMENT
    (65) IF_CONDITION -> . IF ( LOGICAL_EXPRESSION ) { INSTRUCTIONS } ELIF_STATEMENTS ELSE_STATEMENT
    (73) FOR_LOOP -> . FOR FOR_CONDITION { INSTRUCTIONS }
    (74) FOR_LOOP -> . FOR FOR_CONDITION INSTRUCTION
    (76) WHILE_LOOP -> . WHILE ( LOGICAL_EXPRESSION ) { INSTRUCTIONS }
    (77) WHILE_LOOP -> . WHILE ( LOGICAL_EXPRESSION ) INSTRUCTION
    (57) CONTROL_INSTRUCTION -> . BREAK
    (58) CONTROL_INSTRUCTION -> . CONTINUE
    (59) CONTROL_INSTRUCTION -> . RETURN
    (60) CONTROL_INSTRUCTION -> . RETURN EXPRESSION
    (61) PRINT_CALL -> . PRINT PRINT_TERMS

    $end            reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    }               reduce using rule 4 (INSTRUCTIONS -> INSTRUCTION .)
    {               shift and go to state 3
    ID              shift and go to state 11
    IF              shift and go to state 12
    FOR             shift and go to state 13
    WHILE           shift and go to state 14
    BREAK           shift and go to state 15
    CONTINUE        shift and go to state 16
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18

    INSTRUCTION                    shift and go to state 4
    INSTRUCTIONS                   shift and go to state 20
    ASSIGN                         shift and go to state 5
    IF_CONDITION                   shift and go to state 6
    FOR_LOOP                       shift and go to state 7
    WHILE_LOOP                     shift and go to state 8
    CONTROL_INSTRUCTION            shift and go to state 9
    PRINT_CALL                     shift and go to state 10

state 5

    (5) INSTRUCTION -> ASSIGN . ;

    ;               shift and go to state 21


state 6

    (6) INSTRUCTION -> IF_CONDITION .

    {               reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    ID              reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    IF              reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    FOR             reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    WHILE           reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    BREAK           reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    CONTINUE        reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    RETURN          reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    PRINT           reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    $end            reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    }               reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    ELSEIF          reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)
    ELSE            reduce using rule 6 (INSTRUCTION -> IF_CONDITION .)


state 7

    (7) INSTRUCTION -> FOR_LOOP .

    {               reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    ID              reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    IF              reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    FOR             reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    WHILE           reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    BREAK           reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    CONTINUE        reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    RETURN          reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    PRINT           reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    $end            reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    }               reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    ELSEIF          reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)
    ELSE            reduce using rule 7 (INSTRUCTION -> FOR_LOOP .)


state 8

    (8) INSTRUCTION -> WHILE_LOOP .

    {               reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    ID              reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    IF              reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    FOR             reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    WHILE           reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    BREAK           reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    CONTINUE        reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    RETURN          reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    PRINT           reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    $end            reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    }               reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    ELSEIF          reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)
    ELSE            reduce using rule 8 (INSTRUCTION -> WHILE_LOOP .)


state 9

    (9) INSTRUCTION -> CONTROL_INSTRUCTION . ;

    ;               shift and go to state 22


state 10

    (10) INSTRUCTION -> PRINT_CALL . ;

    ;               shift and go to state 23


state 11

    (11) ASSIGN -> ID . ASSIGN_TYPE EXPRESSION
    (12) ASSIGN -> ID . [ INTNUM ] ASSIGN_TYPE EXPRESSION
    (13) ASSIGN -> ID . [ INTNUM , INTNUM ] ASSIGN_TYPE EXPRESSION
    (14) ASSIGN_TYPE -> . =
    (15) ASSIGN_TYPE -> . ADDASSIGN
    (16) ASSIGN_TYPE -> . SUBASSIGN
    (17) ASSIGN_TYPE -> . DIVASSIGN
    (18) ASSIGN_TYPE -> . MULASSIGN

    [               shift and go to state 25
    =               shift and go to state 26
    ADDASSIGN       shift and go to state 27
    SUBASSIGN       shift and go to state 28
    DIVASSIGN       shift and go to state 29
    MULASSIGN       shift and go to state 30

    ASSIGN_TYPE                    shift and go to state 24

state 12

    (64) IF_CONDITION -> IF . ( LOGICAL_EXPRESSION ) INSTRUCTION ELIF_STATEMENTS ELSE_STATEMENT
    (65) IF_CONDITION -> IF . ( LOGICAL_EXPRESSION ) { INSTRUCTIONS } ELIF_STATEMENTS ELSE_STATEMENT

    (               shift and go to state 31


state 13

    (73) FOR_LOOP -> FOR . FOR_CONDITION { INSTRUCTIONS }
    (74) FOR_LOOP -> FOR . FOR_CONDITION INSTRUCTION
    (75) FOR_CONDITION -> . TERM = INTNUM_OR_ID : INTNUM_OR_ID
    (38) TERM -> . ID
    (39) TERM -> . INTNUM
    (40) TERM -> . FLOATNUM
    (41) TERM -> . STRING
    (42) TERM -> . MATRIX
    (43) TERM -> . FUNCTION_CALL
    (44) TERM -> . ID '
    (45) TERM -> . - ID
    (48) MATRIX -> . [ VECTORS ]
    (53) FUNCTION_CALL -> . FUNCTION_NAME ( TERM )
    (54) FUNCTION_NAME -> . ZEROS
    (55) FUNCTION_NAME -> . ONES
    (56) FUNCTION_NAME -> . EYE

    ID              shift and go to state 34
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 36
    STRING          shift and go to state 37
    -               shift and go to state 40
    [               shift and go to state 41
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    FOR_CONDITION                  shift and go to state 32
    TERM                           shift and go to state 33
    MATRIX                         shift and go to state 38
    FUNCTION_CALL                  shift and go to state 39
    FUNCTION_NAME                  shift and go to state 42

state 14

    (76) WHILE_LOOP -> WHILE . ( LOGICAL_EXPRESSION ) { INSTRUCTIONS }
    (77) WHILE_LOOP -> WHILE . ( LOGICAL_EXPRESSION ) INSTRUCTION

    (               shift and go to state 46


state 15

    (57) CONTROL_INSTRUCTION -> BREAK .

    ;               reduce using rule 57 (CONTROL_INSTRUCTION -> BREAK .)


state 16

    (58) CONTROL_INSTRUCTION -> CONTINUE .

    ;               reduce using rule 58 (CONTROL_INSTRUCTION -> CONTINUE .)


state 17

    (59) CONTROL_INSTRUCTION -> RETURN .
    (60) CONTROL_INSTRUCTION -> RETURN . EXPRESSION
    (19) EXPRESSION -> . BINARY_EXPRESSION
    (20) EXPRESSION -> . LOGICAL_EXPRESSION
    (21) EXPRESSION -> . MATRIX_EXPRESSION
    (22) EXPRESSION -> . ( EXPRESSION )
    (23) EXPRESSION -> . TERM
    (24) BINARY_EXPRESSION -> . EXPRESSION + EXPRESSION
    (25) BINARY_EXPRESSION -> . EXPRESSION - EXPRESSION
    (26) BINARY_EXPRESSION -> . EXPRESSION * EXPRESSION
    (27) BINARY_EXPRESSION -> . EXPRESSION / EXPRESSION
    (28) LOGICAL_EXPRESSION -> . EXPRESSION > EXPRESSION
    (29) LOGICAL_EXPRESSION -> . EXPRESSION < EXPRESSION
    (30) LOGICAL_EXPRESSION -> . EXPRESSION EQORGT EXPRESSION
    (31) LOGICAL_EXPRESSION -> . EXPRESSION EQORLESS EXPRESSION
    (32) LOGICAL_EXPRESSION -> . EXPRESSION EQUAL EXPRESSION
    (33) LOGICAL_EXPRESSION -> . EXPRESSION NOTEQUAL EXPRESSION
    (34) MATRIX_EXPRESSION -> . EXPRESSION DOTADD EXPRESSION
    (35) MATRIX_EXPRESSION -> . EXPRESSION DOTSUB EXPRESSION
    (36) MATRIX_EXPRESSION -> . EXPRESSION DOTMUL EXPRESSION
    (37) MATRIX_EXPRESSION -> . EXPRESSION DOTDIV EXPRESSION
    (38) TERM -> . ID
    (39) TERM -> . INTNUM
    (40) TERM -> . FLOATNUM
    (41) TERM -> . STRING
    (42) TERM -> . MATRIX
    (43) TERM -> . FUNCTION_CALL
    (44) TERM -> . ID '
    (45) TERM -> . - ID
    (48) MATRIX -> . [ VECTORS ]
    (53) FUNCTION_CALL -> . FUNCTION_NAME ( TERM )
    (54) FUNCTION_NAME -> . ZEROS
    (55) FUNCTION_NAME -> . ONES
    (56) FUNCTION_NAME -> . EYE

    ;               reduce using rule 59 (CONTROL_INSTRUCTION -> RETURN .)
    (               shift and go to state 51
    ID              shift and go to state 34
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 36
    STRING          shift and go to state 37
    -               shift and go to state 40
    [               shift and go to state 41
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    EXPRESSION                     shift and go to state 47
    BINARY_EXPRESSION              shift and go to state 48
    LOGICAL_EXPRESSION             shift and go to state 49
    MATRIX_EXPRESSION              shift and go to state 50
    TERM                           shift and go to state 52
    MATRIX                         shift and go to state 38
    FUNCTION_CALL                  shift and go to state 39
    FUNCTION_NAME                  shift and go to state 42

state 18

    (61) PRINT_CALL -> PRINT . PRINT_TERMS
    (62) PRINT_TERMS -> . PRINT_TERMS , TERM
    (63) PRINT_TERMS -> . TERM
    (38) TERM -> . ID
    (39) TERM -> . INTNUM
    (40) TERM -> . FLOATNUM
    (41) TERM -> . STRING
    (42) TERM -> . MATRIX
    (43) TERM -> . FUNCTION_CALL
    (44) TERM -> . ID '
    (45) TERM -> . - ID
    (48) MATRIX -> . [ VECTORS ]
    (53) FUNCTION_CALL -> . FUNCTION_NAME ( TERM )
    (54) FUNCTION_NAME -> . ZEROS
    (55) FUNCTION_NAME -> . ONES
    (56) FUNCTION_NAME -> . EYE

    ID              shift and go to state 34
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 36
    STRING          shift and go to state 37
    -               shift and go to state 40
    [               shift and go to state 41
    ZEROS           shift and go to state 43
    ONES            shift and go to state 44
    EYE             shift and go to state 45

    PRINT_TERMS                    shift and go to state 53
    TERM                           shift and go to state 54
    MATRIX                         shift and go to state 38
    FUNCTION_CALL                  shift and go to state 39
    FUNCTION_NAME                  shift and go to state 42

state 19

    (2) INSTRUCTIONS -> { INSTRUCTIONS . }

    }               shift and go to state 55


state 20

    (3) INSTRUCTIONS -> INSTRUCTION INSTRUCTIONS .

    $end            reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION INSTRUCTIONS .)
    }               reduce using rule 3 (INSTRUCTIONS -> INSTRUCTION INSTRUCTIONS .)


state 21

    (5) INSTRUCTION -> ASSIGN ; .

    {               reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    ID              reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    IF              reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    FOR             reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    WHILE           reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    BREAK           reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    CONTINUE        reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    RETURN          reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    PRINT           reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    $end            reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    }               reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    ELSEIF          reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)
    ELSE            reduce using rule 5 (INSTRUCTION -> ASSIGN ; .)


state 22

    (9) INSTRUCTION -> CONTROL_INSTRUCTION ; .

    {               reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    ID              reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    IF              reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    FOR             reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    WHILE           reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    BREAK           reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    CONTINUE        reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    RETURN          reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    PRINT           reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    $end            reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    }               reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    ELSEIF          reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)
    ELSE            reduce using rule 9 (INSTRUCTION -> CONTROL_INSTRUCTION ; .)


state 23

    (10) INSTRUCTION -> PRINT_CALL ; .

    {               reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    ID              reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    IF              reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    FOR             reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    WHILE           reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    BREAK           reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    CONTINUE        reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    RETURN          reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    PRINT           reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    $end            reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    }               reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    ELSEIF          reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)
    ELSE            reduce using rule 10 (INSTRUCTION -> PRINT_CALL ; .)


state 24

    (11) ASSIGN -> ID ASSIGN_TYPE . EXPRESSION
    (19) EXPRESSION -> . BINARY_EXPRESSION
    (20) EXPRESSION -> . LOGICAL_EXPRESSION
    (21) EXPRESSION -> . MATRIX_EXPRESSION
    (22) EXPRESSION -> . ( EXPRESSION )
    (23) EXPRESSION -> . TERM
    (24) BINARY_EXPRESSION -> . EXPRESSION + EXPRESSION
    (25) BINARY_EXPRESSION -> . EXPRESSION - EXPRESSION
    (26) BINARY_EXPRESSION -> . EXPRESSION * EXPRESSION
    (27) BINARY_EXPRESSION -> . EXPRESSION / EXPRESSION
    (28) LOGICAL_EXPRESSION -> . EXPRESSION > EXPRESSION
    (29) LOGICAL_EXPRESSION -> . EXPRESSION < EXPRESSION
    (30) LOGICAL_EXPRESSION -> . EXPRESSION EQORGT EXPRESSION
    (31) LOGICAL_EXPRESSION -> . EXPRESSION EQORLESS EXPRESSION
    (32) LOGICAL_EXPRESSION -> . EXPRESSION EQUAL EXPRESSION
    (33) LOGICAL_EXPRESSION -> . EXPRESSION NOTEQUAL EXPRESSION
    (34) MATRIX_EXPRESSION -> . EXPRESSION DOTADD EXPRESSION
    (35) MATRIX_EXPRESSION -> . EXPRESSION DOTSUB EXPRESSION
    (36) MATRIX_EXPRESSION -> . EXPRESSION DOTMUL EXPRESSION
    (37) MATRIX_EXPRESSION -> . EXPRESSION DOTDIV EXPRESSION
    (38) TERM -> . ID
    (39) TERM -> . INTNUM
    (40) TERM -> . FLOATNUM
    (41) TERM -> . STRING
    (42) TERM -> . MATRIX
    (43) TERM -> . FUNCTION_CALL
    (44) TERM -> . ID '
    (45) TERM -> . - ID
    (48) MATRIX -> . [ VECTORS ]
    (53) FUNCTION_CALL -> . FUNCTION_NAME ( TERM )
    (54) FUNCTION_NAME -> . ZEROS
    (55) FUNCTION_NAME -> . ONES
    (56) FUNCTION_NAME -> . EYE
